# celinelu-basic-training

./: .coverage  .dockerignore  .gitignore  Answer.md  Dockerfile  PycharmTest.py  PythonTest.py  README.md  Test.py  car.py  celerybeat-schedule  docker-compose.yml  main.py  pycharm-test.py  pyproject.toml  python-test.py  requirements.txt
api/: ptt.py  ptt_datacrawl.py
app/: main.py
db/: base.py  crud.py  database.py
docs/: FIRST_TRAINING.md  README.md
docs/first-training/: python-test.py  requirements.txt
docs/notes/: celery.txt  docker.txt  fastAPI  pytest.txt  staffs.txt
first-training/: .env  pycharm-test.py
first-training/mypackage/: mymodule.py
model/: ptt_content.py
schema/: ptt_content.py
static/: add_new_post.html  index.html
static/css/: css.css
tasks/: celery_tasks.py  ptt.db  ptt_crawl.py  ptt_datacrawl.py  ptt_save_posts.py  test.py
tests/: conftest.py  test.py  test_crud.py  test_ptt_crawl.py  test_ptt_page1.html  test_ptt_page2.html  test_ptt_post.html
